--- a/src/main/webapp/resources/web/css/main.css
+++ b/src/main/webapp/resources/web/css/main.css
@@ -1,4 +1,4 @@
-/**
+ 	/**
  * Grid container
  */
 #main {
@@ -16,10 +16,9 @@
 /**
  * Grid items
  */
-#tiles li {
- 	width: 280px;
+#tiles li{
+ 	width: 200px;
 	background-color: #ffffff;
-	border: 1px solid #dedede;
 	border-radius: 2px;
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
@@ -27,7 +26,7 @@
 	cursor: pointer;
 	border-radius: 0.2em;
 }
-#tiles li img{
+#tiles li p img{
 	border-top-left-radius:0.2em;
 	border-top-right-radius:0.2em;
 }
@@ -36,10 +35,17 @@
   opacity: 0;
 }
 
-#tiles li img {
+#tiles li p img {
  	display: block;
 	width: 100%;
 }
+
+#webtoonimage{
+
+	width:60%;
+	
+}
+
 
 /**
  * Grid item text
