--- a/src/main/webapp/resources/web/css/style.css
+++ b/src/main/webapp/resources/web/css/style.css
@@ -19,7 +19,9 @@ a{text-decoration:none;}
 .vertical-top{	vertical-align:top;}/* vertical align top */
 nav.vertical ul li{	display:block;}/* vertical menu */
 nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
-img{max-width:100%;}
+
+
+img {max-width:75%;}
 /*end reset*/
 body{
 	font-family: 'Open Sans', sans-serif;
@@ -32,16 +34,18 @@ body{
 }
 /*---start-header----*/
 .header{
-	background:url(../images/border.png) repeat-x 0px 0px #FFF;
+
 	padding: 1.5em 0 1.2em;
 	border-bottom: 1px solid rgba(214, 213, 212, 0.64);
 	position: fixed;
 	width: 100%;
 	top: 0;
 	z-index: 999;
+	background-color: white;
 }
 .logo{
 	float:left;
+	left : 50px;
 }
 .logo img{
 	display:inline-block;
@@ -59,9 +63,10 @@ body{
 }
 .top-searchbar {
 	float: left;
-	width: 46%;
+	width: 50%;
 	position: relative;
-	margin-left: 2em;
+	left :10px;
+
 }
 .top-searchbar input[type="text"]{
 	margin-top: 0.55em;
@@ -81,6 +86,7 @@ body{
 	font-family: 'Open Sans', sans-serif;
 	color:#777;
 	position:relative;
+	
 }
 .top-searchbar input[type="text"]{
 	background:#F7F6F6;
@@ -96,7 +102,6 @@ body{
 	display: inline-block;
 	border: none;
 	top: 12px;
-	right: -22px;
 	outline:none;
 	cursor:pointer;
 }
@@ -163,7 +168,7 @@ a.boxclose{
 /*--userinfo--*/
 .userinfo{
 	float: right;
-	width: 15%;
+	width: 18%;
 	margin-top: 0.3em;
 }
 .user ul li{
